<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Ajustes" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/texto1"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center" >

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" >

            <RadioButton
                android:id="@+id/rbExterna"
                android:layout_width="102dp"
                android:layout_height="48dp"
                android:layout_weight="0.15"
                android:text="@string/textoRB1"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rbInterna"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:text="@string/textoRB2"
                android:textSize="14sp" />

        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/texto2"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/btGuardar" />

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/btCancelar" />
    </LinearLayout>

</LinearLayout>